--- a/js/dom/tp-dom/index.html
+++ b/js/dom/tp-dom/index.html
@@ -15,6 +15,7 @@
         <button id="btn_addTitle">Ajouter H</button>
         <button id="btn_addPara">Ajouter P</button>
     </nav>
+    <button id="btn_hideAll" value="hide">Cacher</button>
     <main>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident neque eaque quam sequi sint quidem placeat aut debitis quaerat! Vero ullam ea veniam quasi doloribus, dicta asperiores eos harum aspernatur!</main>
 </body>
 </html>
